--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,11 +37,22 @@
         android:layout_height="wrap_content"
         android:text="Paging-单adapter"
         android:textAllCaps="false"
+        app:layout_constraintBottom_toTopOf="@+id/btnPagingNetToLocal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnType"
+        tools:ignore="HardcodedText" />
+
+    <Button
+        android:id="@+id/btnPagingNetToLocal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Paging-room-adapter"
+        android:textAllCaps="false"
         app:layout_constraintBottom_toTopOf="@+id/btnPagingType"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-
-        app:layout_constraintTop_toBottomOf="@+id/btnType"
+        app:layout_constraintTop_toBottomOf="@+id/btnPagingAdapter"
         tools:ignore="HardcodedText" />
 
     <Button
@@ -53,6 +64,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnPagingAdapter"
+        app:layout_constraintTop_toBottomOf="@+id/btnPagingNetToLocal"
         tools:ignore="HardcodedText" />
 </androidx.constraintlayout.widget.ConstraintLayout>
